--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://lo11o94.github.io/folletti",
+  "homepage": "http://lo11o94.github.io/folletticlient",
   "name": "folletticlient",
   "version": "0.1.0",
   "private": true,
